# electro-mart

./: README.md
api/: .dockerignore  .env  .envrc  .gitignore  Cargo.toml  Dockerfile  fly.toml
api/.cargo/: config.toml
api/.sqlx/: query-00e7a702a11cbc84f7caa22dc04e3f6451fac75c23e6a6f662cb586db9c73f9b.json  query-01bd16219afcaa2651d00102c2792e0fcd3d544d8e1d1347e9bb1bdb76643787.json  query-02e7ab24d21bd88295df5cafa4c471be756c1a7ba492c4e68e64b134fd505278.json  query-04ec0cf36e1de98a1b296a94369d5e34f76c2aa7541b3859f6cefd04a8deeac2.json  query-09188b61624ca92d8ca10c1b0d1edbdbb27d6c719c3047094259dfc64f1324ef.json  query-0bddf03a0f23126db40258b93b0c031737e0450ab4bcd2a25353bfbf0fb51906.json  query-0d400022f6e44f611ffe78d313426f99db1c7ee95600ac4b153f686fd332a6b0.json  query-165b3302f064b77090c00bf6a148548b0e4be3cf7dc95e95db731fd44103a1e2.json  query-20ce4414d7ed504bd9b1c16a0f96a215bee7971e0b1dba82fa1817dbb0577b1c.json  query-212e52bba64428f32c49ae3e80fc9b3ba1e40ff7b4558969a3d8c7085af97520.json  query-274938839d48409f753a1f51b91b92f3f338a424d9b426f0e1f236a744b37873.json  query-2b8128cbf460cc08de6fd4b21c00a60f3d7764c01f9000b30547e77b19b4ae98.json  query-2f3f022a9049c9474b738e9bd71224f0d325060fe93e13b99f17510dfeae239a.json  query-3078127a048b01b029704c463d96e9e4c7a7d149166e3d7297ccb76fa877b9b2.json  query-3b4793487017088113ca9421412da433df1bf7bb51a895667b1cfa6802dea159.json  query-3c795cfc24210d387302bbb54f2af659d43d59db392a714c19851893f285f184.json  query-3e46634b619ed0656f5ef81d5604fe7c614ac20fc9bc6ce8691a7abb5529cd1b.json  (+36 more)
api/migrations/: 20240422093055_initial.sql  (+6 more)
(+72 files in other folders)
