[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
poem = { version = "3", features = ["anyhow"] }
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jwt = "0.16"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
