[package]
name = "electro-mart-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Errors
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
# Web server
tokio = { version = "1", features = ["full"] }
poem = { version = "3", features = ["anyhow"] }
poem-openapi = { version = "5", features = ["swagger-ui", "chrono"] }
swagger-ui = "0.1"
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = "0.4"
# Authentication
jwt = "0.16"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
